--- a/templates/base.html
+++ b/templates/base.html
@@ -71,6 +71,8 @@
         {% block content %}{% endblock %}
     </div>
     <div id="footer">
+        <a href="http://designdisease.com/portfolio/dilectio_wordpress_theme/">background: delectio wordpress theme</a>
+        
         <script type="text/javascript">
         var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
         document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
