--- a/templates/topics.html
+++ b/templates/topics.html
@@ -56,6 +56,11 @@
         .topic p {
             margin-bottom: 0px;
         }
+        
+        #search {
+            background:#FFFFFF url(http://stackoverflow.com/Content/Img/search.png) no-repeat scroll left center;
+            padding-left: 20px;
+        }
     </style>
 {% endblock %}
 
@@ -76,9 +81,9 @@
             <a href="/{{ forum }}/new_topic">start a topic</a>
         </h2>
         <form action="/{{forum}}/search" method="get">
-            <input id="search" type="text" name="query" value="search forum" style="width: 70%">
-            <input type="submit" value="go">
+            <input id="search" type="text" name="query" value="search this forum">
         </form>
+        <br>
         {{ sidebar|markdownify }}
     </div>
 
