Replaced yahoo boss search with google ajax search.

--- a/templates/base.html
+++ b/templates/base.html
@@ -71,8 +71,9 @@
         {% block content %}{% endblock %}
     </div>
     <div id="footer">
-        <a href="http://designdisease.com/portfolio/dilectio_wordpress_theme/">background: delectio wordpress theme</a>
-        
+        <a href="http://designdisease.com/portfolio/dilectio_wordpress_theme/">thanks to designdisease.com for the background theme!</a>
+    </div>
+    <div id="scriptz">
         <script type="text/javascript">
         var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
         document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
