--- a/templates/topics.html
+++ b/templates/topics.html
@@ -17,6 +17,8 @@
             width: 200px;
             float: right;
             text-align: right;
+            font-weight: bold;
+            font-size: 1.1em;
         }
         
         #sidebar ul {
@@ -30,13 +32,13 @@
         }
         
         #sidebar a {
-            width: 200px;
+            width: 180px;
             display: block;
-            padding:5px 10px;
+            padding: 5px 10px;
         }
         
         #sidebar a:hover {
-            background: orange;
+            background: #EFEBC2;
         }
         
         #sidebar input {
@@ -60,6 +62,7 @@
         #search {
             background:#FFFFFF url(http://stackoverflow.com/Content/Img/search.png) no-repeat scroll left center;
             padding-left: 20px;
+            width: 160px;
         }
     </style>
 {% endblock %}
