--- a/static/webnodes.css
+++ b/static/webnodes.css
@@ -27,7 +27,7 @@ body {
     font-size: 16px;
     line-height: 1.5em;
     color: black;
-    background: #F3F2E8 url(/static/bg.gif) no-repeat scroll center top;
+    background: #F3F2E8 url(/static/bg.gif) no-repeat fixed center top;
     width: 100%;
     height: 100%;
 }
@@ -47,7 +47,7 @@ h3                      { font-size: 1.1em;  }
 h4                      { font-size: 1em; }
 
 a                       { color: #2D7BB2; text-decoration: none; outline: none; padding: 3px 0px;}
-a:hover                 { color: #FFFFFF; background-color: #2D7BB2; }
+a:hover                 { color: #FFFFFF; background-color: #81B0CF; }
 a:visited               { color: #67767F; }
 
 pre, code               { font-size: 0.8em; }
@@ -83,7 +83,7 @@ input:focus, textarea:focus {
     margin-top: 5px;
     padding-left: 5px;
     font-size: 1.2em;
-    height: 70px;
+    height: 100px;
     width: 99%;
 }
 
