--- a/templates/search.html
+++ b/templates/search.html
@@ -24,7 +24,7 @@
     </script>
     
     <style>
-        .gsc-search-box, .gsc-tabsArea, .gsc-resultsHeader {
+        table.gsc-search-box, .gsc-tabsArea, .gsc-resultsHeader {
             display: none;
         }
         .gsc-control {
