Added likes, flagging, simplified topic template.

--- a/templates/basic_form.html
+++ b/templates/basic_form.html
@@ -10,7 +10,7 @@
             width: 500px;
         }
         
-        textarea, input[type=text] {
+        textarea, input[type=text], input[type=password] {
             width: 100%;
         }
         
