--- a/static/webnodes.css
+++ b/static/webnodes.css
@@ -27,7 +27,7 @@ body {
     font-size: 16px;
     line-height: 1.5em;
     color: #000000;
-    background: #FFFFFF;
+    background: #FFFFFF url(/static/bg.png) repeat-x scroll 0 0;
     width: 100%;
     height: 100%;
 }
@@ -103,10 +103,8 @@ input:focus, textarea:focus {
 
 /* generic styles */
 .box {
-    position: relative;
-    background-color: #FFFFFF;
     padding: 0.8em;
-    border: 8px solid #A7B6BF;
+    border: 5px solid #C7CACC;
 }
 
 .box img {
