--- a/static/webnodes.css
+++ b/static/webnodes.css
@@ -24,11 +24,12 @@ blockquote, q           { quotes: none; }
 
 body {
     font-family: Helvetica,Arial,sans-serif;
-    font-size: 16px;
-    line-height: 1.5em;
+    font-size: 18px;
+    line-height: 1.3em;
     color: #000000;
-    background: #FFFFFF url(/static/bg.png) repeat-x scroll 0 0;
+    background: #FFFFFF;
     width: 100%;
+    max-width: 1400px;
     height: 100%;
 }
 
@@ -47,29 +48,32 @@ h3                      { font-size: 1.1em;  }
 h4                      { font-size: 1em; }
 
 a                       { color: #2D7BB2; text-decoration: none; outline: none; padding: 3px 0px;}
-a:hover                 { color: #FFFFFF; background-color: #81B0CF; }
+a:hover                 { color: #DDB45C; }
 a:visited               { color: #67767F; }
 
 pre, code               { font-size: 0.8em; }
 
 label {
-    color: #47697F;
     font-weight: bold;
     font-size: 1.3em;
     display: block;
 }
 
-input, textarea, .button {
-    background: #FFFFFF;
+input, textarea {
     font-family: Arial, sans-serif;
-    padding: 0.3em;
+    padding: 0.2em;
     font-size: 1em;
     margin-bottom: 5px;
-    border: 3px solid #A7B6BF;
+    border: 1px solid #A7B6BF;
+}
+
+
+textarea {
+    border: 2px solid #BFBFBF;
 }
 
 input:focus, textarea:focus {
-    border-color: #2D7BB2;
+    border: 2px solid #6F6F6F;
 }
 
 .button:hover, input[type=submit]:hover {
@@ -81,20 +85,41 @@ input:focus, textarea:focus {
 /* base.html */
 #header {
     margin-top: 5px;
-    padding-left: 5px;
+    padding: 0px 20px;
     font-size: 1.2em;
-    height: 100px;
-    width: 99%;
+    height: 110px;
 }
 
-#header_profile {
+#logo {
+    color: #000000;
+    text-shadow: #3F3F3F 1px 1px 2px;
+    font-size: 2.5em; 
+    letter-spacing: -5px; 
+    font-weight:bold; 
+    position:relative; 
+    top: 30px;
+}
+
+#navbar {
+    position: relative;
+    top: 25px;
     float: right;
 }
 
+#navbar li {
+    display: block;
+    float: left;
+    list-style-type: none;
+    border-bottom: 2px solid #FFFFFF;
+    padding: 15px;
+}
+
+#navbar li:hover {
+    border-bottom: 2px solid black;
+}
+
 #content {
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
+    padding-left: 20px;
 }
 
 #footer {
@@ -103,8 +128,11 @@ input:focus, textarea:focus {
 
 /* generic styles */
 .box {
-    padding: 0.8em;
-    border: 5px solid #C7CACC;
+    padding: 0.4em;
+    border: 4px solid #C7CACC;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
 }
 
 .box img {
